Base Layer for Halo

--- a/Examples/Halo/index.html
+++ b/Examples/Halo/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div id="game-container">
+      <div id = "player"></div>
+      <div id = "enemy"></div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
